--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ag-grid-react": "^21.0.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "cross-env": "^7.0.3",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "npm": "^6.9.0",
